@@ -1,3 +1,8 @@
+2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* networkconfig.h: Loopback only network configuration. Use one of the
+	real ones as an example.
+
 2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* networkconfig-qemu.h: Disable DHCP and use static IP.
